# python-monorepo

./: .gitignore  README.md  pyproject.toml
libs/lib-one/: pyproject.toml
libs/lib-one/lib_one/: main.py
libs/lib-one/tests/: test_lib_one.py
libs/lib-two/: pyproject.toml
libs/lib-two/tests/: test_lib_two.py
libs/logger/: pyproject.toml
libs/logger/logger/: logger.py
projects/project-one/: __main__.py  pyproject.toml
projects/project-one/project_one/: __main__.py  main.py
projects/project-two/: pyproject.toml
projects/project-two/project_two/: __main__.py
sample_1/: README.md
sample_1/libs/lib-one/lib_one/: main.py
sample_1/libs/lib-two/lib_two/: __main__.py  main.py
sample_1/libs/logger/logger/: logger.py
sample_1/libs/logger/tests/: test_logger.py
sample_1/projects/project-one/tests/: test_project_one.py
sample_1/projects/project-two/: pyproject.toml
sample_1/projects/project-two/tests/: test_project_two.py
sample_2/: README.md  pyproject.toml
sample_2/api/: __main__.py  pyproject.toml
sample_2/api/api/app/: injector.py  router.py  server.py
sample_2/api/api/controller/: user_controller.py
sample_2/api/api/dto/: user.py
sample_2/api/tests/: test_api.py
sample_2/core/: pyproject.toml
sample_2/core/core/domain/: user.py
sample_2/core/core/inerface/: user_repository.py
sample_2/core/core/service/: user_service.py
sample_2/core/core/utils/: logger.py
sample_2/core/tests/: test_core.py
sample_2/database/: pyproject.toml
sample_2/database/database/: __init__.py
sample_2/database/database/repository/: user_repository_impl.py
sample_2/database/tests/: test_database.py
